k8s-manifest/prod/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: nodejs-app
        image: mihirya/nodejs-app:prod-914232bbd8da2675add052fbc3d25f92258bec68
        ports:
        - containerPort: 5000
